@@ -1,0 +1,26 @@
+title: Check used space in VMWare ESX Datastores
+agents: vsphere
+author: Mathias Kettner <mk@mathias-kettner.de>
+license: GPL
+distribution: check_mk
+description:
+ This check uses the output of the vsphere special agent in order to
+ monitor the used space in datastores. It also displays this amount
+ of (over) provisioning.
+
+ This check is 100% compatible with normal filesystem check in all respects.
+ Please refer to the manpage of {df} for details - except for the support for
+ filesystem grouping.
+
+item:
+ The logical name of the filesystem (not the mountpoint!)
+
+perfdata:
+ See {df} for details
+
+inventory:
+ One service per datastore will be created.
+
+[parameters]
+params(dict): See {df} for details
+
